# NeuroSimV3

./: .gitignore  README.md  growthidea.txt
cpp/: CMakeLists.txt
cpp/include/: CMakeCache.txt
cpp/include/neuralsim/: IzhikevichNeuron.h  NeuronTemplates.h
cpp/src/: IzhikevichNeuron.cpp
cpp/tests/: test_izhikevich.cpp
python/: NeuronDist2.png.csv  axonal_dynamics.py  connectivity_matrix.npy  connectivity_templates.py  connectome.py  connectomeprocessing.ipynb  izhikevich.py  neuron_population.py  neuron_templates.py  normalized_weighted_data.csv  normalized_weighted_data.npy  notebook.ipynb  overhead.py  percentages.csv  synapse_dynamics.py
python/FinalPaper/: analyze_normalization_grid.py  grid_search_normalization_topology.py  readme.txt
python/Midterm/: analyze_batch_sweep2d_results.py  analyze_robustness_results.py  analyze_solution_families.py  analyze_sweep2d_results.py  format_family_summary_statistics.py  midterm_testing.ipynb  run_analysis_code_sweeps.py  ssai_nsga2.py  ssai_nsga2_objective.py  ssai_post_nsga_analysis.py  summarize_batch_metrics_by_topology.py  summarize_representative_family_metrics.py
python/independent_study_notebooks/: STDP.py  STDP_simpleneuron.py  week12.ipynb  week12.py  week12_STDP.ipynb  week12_gridsearch copy 2.py  week12_gridsearch copy.py  week12_gridsearch.py  weight_scale_tests.ipynb
python/notebooks/: 5660testing.ipynb  connectome.html  connectomeprocessing.ipynb  math_testing.ipynb  notebook.ipynb  notebook2.ipynb  notebook_connectome.ipynb  notebook_graph.ipynb  notebook_growth.ipynb  notebook_growth2.ipynb  (+1 more)
(+60 files in other folders)
